attempt to fix the jumping of bottom sticky on mobile browsers

--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -351,6 +351,7 @@
   position: sticky;
 
   bottom: 0;
+  z-index: 50;
 
   grid-column: 1 / -1;
   grid-row: 5 / -1;
