--- a/src/styles/App.global.scss
+++ b/src/styles/App.global.scss
@@ -1,34 +1,35 @@
 @import-normalize;
-@import "./partials/variables";
-@import "./partials/breakpoints";
-@import "./partials/components";
-@import "./partials/layout";
+@import './partials/variables';
+@import './partials/breakpoints';
+@import './partials/components';
+@import './partials/layout';
 
 html {
-	box-sizing: border-box;
+  box-sizing: border-box;
+  height: 100%;
 }
 
 *,
 *::before,
 *::after {
-	box-sizing: inherit;
-	margin: 0;
-	padding: 0;
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-	font-family: $font-spartan;
-	background-color: $cl-darker-grey-blue;
-	width: 100%;
-	min-width: 320px;
-	height: 100%;
+  font-family: $font-spartan;
+  background-color: $cl-darker-grey-blue;
+  width: 100%;
+  min-width: 320px;
+  height: 100%;
 }
 
 a {
-	color: inherit;
-	text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 img {
-	max-width: 100%;
+  max-width: 100%;
 }
